--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Our Menu</title>
+</head>
+<body>
+
+<h1>Our Menu</h1>
+<div class="row">
+  <div class="content col-lg col-md1" id="content1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.
+    <div class="des" id="p1"> Chicken </div>
+  </div>
+
+  <div class="content col-lg col-md1" id="content2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
+    <div class="des" id="p2"> Beef </div>
+  </div>
+
+  <div class="content col-lg col-md2" id="content3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
+    <div class="des" id="p3"> Sushi </div>
+  </div>
+</div>
+
+</body>
+
+</html>
 
